Put contents to raspberrypi.html

--- a/raspberrypi.html
+++ b/raspberrypi.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>raspberrypi</title>
+    <title>Raspberrypi</title>
 </head>
 <body>
+   <h1>Raspberry pi</h1>
+    <p>
+        Raspberry Pi is defined as a minicomputer the size of a credit card that is interoperable with any input and output hardware device like a monitor, a television, a mouse, or a keyboard – effectively converting the set-up into a full-fledged PC at a low cost. This article discusses the Raspberry Pi models available today, their key features, and use cases. 
+    </p>
     
 </body>
 </html>
